--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,7 +17,7 @@ dependencies:
   battery_plus: ^6.2.1
   wakelock_plus: ^1.2.11
   installed_apps: ^1.6.0
-  app_launcher: ^1.0.1
+  external_app_launcher: ^4.0.3
 
 dev_dependencies:
   flutter_test:
