--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,12 +18,20 @@ dependencies:
   wakelock_plus: ^1.2.11
   installed_apps: ^1.6.0
   external_app_launcher: ^4.0.3
+  hive_ce: ^2.10.1
+  hive_ce_flutter: ^2.2.0
+  flutter_riverpod: ^2.6.1
+  riverpod_annotation: ^2.6.1
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
 
   flutter_lints: ^5.0.0
+  riverpod_generator: ^2.6.5
+  build_runner: ^2.4.15
+  custom_lint: ^0.7.5
+  riverpod_lint: ^2.6.5
 
 flutter:
   uses-material-design: true
