--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,6 +22,7 @@ dependencies:
   hive_ce_flutter: ^2.2.0
   flutter_riverpod: ^2.6.1
   riverpod_annotation: ^2.6.1
+  flutter_svg: ^2.0.17
 
 dev_dependencies:
   flutter_test:
@@ -37,9 +38,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  assets:
+    - assets/svgs/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
