--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,7 @@ dependencies:
   riverpod_annotation: ^2.6.1
   flutter_svg: ^2.0.17
   gap: ^3.0.1
+  gaimon: ^1.4.0
 
 dev_dependencies:
   flutter_test:
