--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,7 @@ dependencies:
   flutter_svg: ^2.0.17
   gap: ^3.0.1
   gaimon: ^1.4.0
+  material_symbols_icons: ^4.2811.0
 
 dev_dependencies:
   flutter_test:
