--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,6 +26,7 @@ dependencies:
   gap: ^3.0.1
   gaimon: ^1.4.0
   material_symbols_icons: ^4.2811.0
+  freezed_annotation: ^3.0.0
 
 dev_dependencies:
   flutter_test:
@@ -36,6 +37,11 @@ dev_dependencies:
   build_runner: ^2.4.15
   custom_lint: ^0.7.5
   riverpod_lint: ^2.6.5
+  hive_ce_generator: ^1.8.2
+  freezed: ^3.0.4
+
+dependencies_override:
+  freezed_annotation: ^3.0.0
 
 flutter:
   uses-material-design: true
