--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,6 +27,7 @@ dependencies:
   gaimon: ^1.4.0
   material_symbols_icons: ^4.2811.0
   freezed_annotation: ^3.0.0
+  file_picker: ^10.1.2
 
 dev_dependencies:
   flutter_test:
