chore: cleanup pubspec

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: afterlight
-description: "A new Flutter project."
-publish_to: "none" # Remove this line if you wish to publish to pub.dev
+description: "A minimalist Android launcher built with Flutter"
+publish_to: "none"
 
 version: 1.0.0+1
 
